<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_hdpi"
        android:paddingTop="@dimen/dimen_hdpi">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dimen_mdpi"
            android:text="@string/label_select_place"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_hdpi"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="@dimen/dimen_mdpi">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/item_place" />
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/dimen_hdpi"
            android:paddingLeft="@dimen/dimen_hdpi"
            android:paddingRight="@dimen/dimen_hdpi"
            android:paddingStart="@dimen/dimen_hdpi">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_mdpi">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:hint="@string/label_name"
                    android:maxLines="1"
                    android:textSize="@dimen/text_ldpi" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_mdpi">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:hint="@string/label_address"
                    android:maxLines="1"
                    android:textSize="@dimen/text_ldpi" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_old_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_mdpi">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_old_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/label_old_price"
                    android:inputType="number"
                    android:maxLength="14"
                    android:maxLines="1"
                    android:textSize="@dimen/text_ldpi" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tl_new_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_mdpi">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_new_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/label_new_price"
                    android:inputType="number"
                    android:maxLength="14"
                    android:maxLines="1"
                    android:textSize="@dimen/text_ldpi" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bt_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_xhdpi"
                android:background="@drawable/bg_rounded_accent"
                android:text="@string/action_submit"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
